[gd_scene load_steps=2 format=3 uid="uid://doyklj58bvj21"]

[ext_resource type="Script" path="res://addons/inventory-system/ui/interactor/interactor_ui.gd" id="1_pqjjt"]

[node name="InteractorUI" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -0.5
offset_top = -0.5
offset_right = 0.5
offset_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pqjjt")

[node name="InteractPosition" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -0.5
offset_top = -0.5
offset_right = -0.5
offset_bottom = -0.5
grow_horizontal = 2
grow_vertical = 2

[node name="InteractMessage" type="Label" parent="InteractPosition"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -52.0
offset_top = -13.0
offset_right = 52.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
text = "E - Open Loot"
horizontal_alignment = 1
vertical_alignment = 1
